# HomeKit-ESP-example

./: .gitmodules
components/esp-idf/http-parser/: README.md  component.mk
components/esp-idf/softAP/: CMakeLists.txt
components/esp-idf/softAP/include/: formUrlEncode.h  index.html.h
components/esp-idf/softAP/src/: formUrlEncode.c
components/esp-idf/softap-config/: CMakeLists.txt  Kconfig  README.md  component.mk
components/esp-idf/softap-config/context/: index.html.h
components/esp-idf/softap-config/include/: softAPConfig.h
components/esp-idf/softap-config/src/: softAPConfig.c
example/esp32/softap/: CMakeLists.txt  Makefile  README.md  sdconfig.ci
example/esp32/softap/main/: CMakeLists.txt  Kconfig.projbuild  appMain.c
